<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:expandedTitleTextColor="?attr/colorOnPrimary"
            android:backgroundTint="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="?colorPrimary">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_gadget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_image_24" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bottom_view_tab_layout"
                android:layout_gravity="bottom"/>
            
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="?attr/colorPrimary"
                app:title="@string/gadget_name"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                app:navigationIconTint="?colorOnPrimary"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                android:background="?colorPrimary">

                <ImageView
                    android:id="@+id/action_share"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/baseline_share_24"
                    app:tint="?attr/colorOnPrimary"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"/>

            </com.google.android.material.appbar.MaterialToolbar>
            
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">
                
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/price_detail"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/rating_detail"
                    android:drawableStart="@drawable/baseline_star_rate_24"
                    app:drawableTint="@color/star_color"
                    android:drawablePadding="6dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textStyle="bold"/>
                
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_below="@id/linear_layout"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_category"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                tools:text="@tools:sample/lorem[50]"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
            
        </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_watch_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_review_video"
                android:drawableTint="?attr/colorOnPrimary"
                app:icon="@drawable/baseline_play_arrow_24"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"/>

        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>